--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a href="#" class="btn btn-outline-primary me-2">Connexion</a>
-                    <a href="#" class="btn btn-primary">Inscription</a>
+                    <a href="inscription.html" class="btn btn-outline-primary me-2">Connexion</a>
+                    <a href="inscription.html" class="btn btn-primary">Inscription</a>
                 </div>
             </div>
         </div>
